--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                 <img class="px-2 animated2 icon" src="images/bootstrap.png" alt data-bs-toggle="tooltip" data-bs-placement="top" title data-original-title="CSS3">
                             </li>
                             <li class="list-group-item align-items-center justify-content-center">
-                                <a href="https://github.com" target="_blank" class="card-link">
+                                <a href="https://github.com/TerezaVaD/Tereza-Personal-Site" target="_blank" class="card-link">
                                     <button type="button" class="btn btn-secondary mx-2">GitHub</button>
                                 </a>
                             </li>
