--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                 
                             </li>
                             <li class="list-group-item align-items-center justify-content-center">
-                                <a href="https://github.com" target="_blank" class="card-link">
+                                <a href="https://github.com/TerezaVaD/SchoolwebApp.git" target="_blank" class="card-link">
                                     <button type="button" class="btn btn-secondary mx-2">GitHub</button>
                                 </a>
                             </li>
