--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
                                 <p class="card-text text-center bodySize">
-                                    School project - An application in which you can create a student, subject and grade database and then edit it.</p>
+                                    School project - An application for create a student, subject and grade database and then edit it.</p>
                             </li>
                             <li class="list-group-item d-flex align-items-center justify-content-center">
                                 <img src="images/hashtag.png" alt data-bs-toggle="tooltip" data-bs-placement="top" title data-original-title="C#" class="px-2 animated2 icon">
